ros2_ws/log/build_2023-12-06_10-54-17/agrobot_pkg/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/tjacobs/ros2_ws/install/agrobot_pkg/lib/python3.10/site-packages/agrobot_pkg/movement_controller_node.py", line 145
    self.logger.info("Target position: " + str(self.target_position.position)
                    ^
SyntaxError: '(' was never closed

